--- a/styles.css
+++ b/styles.css
@@ -17,15 +17,18 @@ body {
     margin: 0 auto;
 }
 
-/* Cabeçalho */
+/* Cabeçalho fixo */
 header {
     background-color: #333;
-    color: #000000;
+    color: #fff;
     padding: 20px 0;
-    position: sticky;
+    position: fixed; /* Fixa o cabeçalho no topo */
     top: 0;
-    z-index: 1000;
+    left: 0;
+    width: 100%;
+    z-index: 1000; /* Garante que o cabeçalho fique acima de outros elementos */
 }
+
 
 header h1 {
     float: left;
@@ -47,16 +50,18 @@ nav ul li a {
     font-weight: bold;
 }
 
-/* Seção Hero */
+
 #hero {
-    background: url('images/hero-bg.jpg') no-repeat center center;
-    background-size: cover; /* Garante que a imagem cubra toda a área */
+    background: url('images/hero-bg.jpg') no-repeat center center/cover;
+    background-size: cover;
     color: #fff;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
+    padding-top: 80px; /* Adiciona espaço para o cabeçalho fixo */
+    margin: 0;
 }
 
 #hero h2 {
